--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn-success.btn-xlg.active" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -60,8 +60,8 @@
           <h2 class="text-center">Mars Hemispheres</h2>
         </div>
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
-          <div class="thumbnail">
+        <div class="col-md-10">
+          <div class="img-rounded">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
